# jupyter-workspace-skeleton

./: .gitignore  README.md  hello.py  pyproject.toml
notebooks/: hello.ipynb
