[project]
name = "jupyter-workspace-skeleton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.1",
    "fastavro>=1.10.0",
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "pyiceberg[daft,duckdb,glue,hive,pandas,pyarrow,ray,s3fs,sql-sqlite]>=0.9.0",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
